eks_yaml/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: cache
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        role: cache
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "cache"
        effect: "NoSchedule"
      containers:
        - name: redis
          image: redis:6.2-alpine
          command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
          ports:
          - containerPort: 6379
          volumeMounts:
          - name: redis-data
            mountPath: /data
          - name: config
            mountPath: /usr/local/etc/redis/
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-pvc
      - name: config
        configMap:
          name: redis-config
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: cache
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
