eks_yaml/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: frontend-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      nodeSelector:
        role: frontend
      containers:
      - name: webapp
        image: 895587011312.dkr.ecr.eu-central-1.amazonaws.com/epam-hw-repository:v1.0.6
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: frontend-web
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: frontend-web
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0e2fdeb8868ad3c8e,subnet-092d537f72541b143
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
